--- a/pubg_game/requirements.txt
+++ b/pubg_game/requirements.txt
@@ -1,5 +1,6 @@
-joblib==1.2.0
-numpy==1.23.0
-pandas==1.4.3
-scikit_learn==1.2.0
-streamlit==1.12.0
+joblib
+numpy
+pandas
+scikit_learn
+streamlit
+catboost
